// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Prueba en <GiftExpertApp /> debe de mostrar el elemento 1`] = `
<div>
  <h1>
    GiftExpertApp
  </h1>
  <AddCategory
    setCategory={[Function]}
  />
  <hr />
</div>
`;

exports[`Prueba en <GiftExpertApp /> debe de mostrar una lista de categorias 1`] = `
<div>
  <h1>
    GiftExpertApp
  </h1>
  <AddCategory
    setCategory={[Function]}
  />
  <hr />
  <GifGrid
    category="One punch"
    key="One punch"
  />
  <GifGrid
    category="Dragon ball"
    key="Dragon ball"
  />
</div>
`;
